WDP181002-6 added box: old price

--- a/src/index.html
+++ b/src/index.html
@@ -187,6 +187,7 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
+                <div class="btn-main-small no-hover old-price">$ 40.00</div>
                 <div class="btn-main-small no-hover">$ 30.00</div>
               </div>
             </div>
@@ -251,6 +252,7 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
+                <div class="btn-main-small no-hover old-price">$ 45.00</div>
                 <div class="btn-main-small no-hover">$ 30.00</div>
               </div>
             </div>
@@ -347,6 +349,7 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
+                <div class="btn-main-small no-hover old-price">$ 40.00</div>
                 <div class="btn-main-small no-hover">$ 30.00</div>
               </div>
             </div>
