--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
           </div>
           <div class="col-auto menu">
             <ul>
-              <li><a href="#" class="active">Home</a></li>
+              <li><a href="#">Home</a></li>
               <li><a href="#">Furniture</a></li>
               <li><a href="#">Chair</a></li>
               <li><a href="#">Table</a></li>
