WDP181002-12 Add RWD for mobiles to nav and banner bar

--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
           </div>
           <div class="col text-right">
             <ul>
-              <li><a href="#"><i class="fas fa-user"></i> Login</a></li>
-              <li><a href="#"><i class="fas fa-lock"></i> Register</a></li>
+              <li><a href="#"><i class="fas fa-user"></i><span class="top-bar__right-text">Login</span></a></li>
+              <li><a href="#"><i class="fas fa-lock"></i><span class="top-bar__right-text">Register</span></a></li>
               <li><a href="#"><i class="fas fa-bars"></i></a></li>
             </ul>
           </div>
@@ -47,6 +47,9 @@
               </div>
               <div class="cart-counter">0</div>
             </a>
+            <div class="col text-left phone-number--mobile">
+              <p><i class="fas fa-mobile-alt"></i> 2300 - 3560 - 222</p>
+            </div>
           </div>
         </div>
       </div>
