WDP181002-10 Created drop-down horizontal menu

--- a/src/index.html
+++ b/src/index.html
@@ -71,13 +71,52 @@
           </div>
           <div class="col-auto menu">
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Furniture</a></li>
-              <li><a href="#">Chair</a></li>
-              <li><a href="#">Table</a></li>
-              <li><a href="#">Sofa</a></li>
-              <li><a href="#">Bedroom</a></li>
-              <li><a href="#">Blog</a></li>
+              <li><a href="#">Home</a>
+                <ul>
+                  <li><a href="#">link1</a></li>
+                  <li><a href="#">link2</a></li>
+                  <li><a href="#">link3</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Furniture</a>
+                <ul>
+                  <li><a href="#">link1</a></li>
+                  <li><a href="#">link2</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Chair</a>
+                <ul>
+                  <li><a href="#">link1</a></li>
+                  <li><a href="#">link2</a></li>
+                  <li><a href="#">link3</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Table</a>
+                <ul>
+                  <li><a href="#">link1</a></li>
+                  <li><a href="#">link2</a></li>
+                  <li><a href="#">link3</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Sofa</a>
+                <ul>
+                  <li><a href="#">link1</a></li>
+                  <li><a href="#">link2</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Bedroom</a>
+                <ul>
+                  <li><a href="#">link1</a></li>
+                  <li><a href="#">link2</a></li>
+                  <li><a href="#">link3</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Blog</a>
+                <ul>
+                  <li><a href="#">link1</a></li>
+                  <li><a href="#">link2</a></li>
+                </ul>
+              </li>
             </ul>
           </div>
         </div>
