WDP181002-13 Added RWD to section Free Shipping

--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
   <div class="section--features">
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col-lg-3 col-md-3 col-sm-6">
           <a href="#" class="feature-link" id="feature-link-1">
             <div class="feature-box">
               <div class="icon">
@@ -139,7 +139,7 @@
             </div>
           </a>
         </div>
-        <div class="col">
+        <div class="col-lg-3 col-md-3 col-sm-6">
           <a href="#" class="feature-link" id="feature-link-2">
             <div class="feature-box">
               <div class="icon">
@@ -152,7 +152,7 @@
             </div>
           </a>
         </div>
-        <div class="col">
+        <div class="col-lg-3 col-md-3 col-sm-6">
           <a href="#" class="feature-link" id="feature-link-3">
             <div class="feature-box">
               <div class="icon">
@@ -165,7 +165,7 @@
             </div>
           </a>
         </div>
-        <div class="col">
+        <div class="col-lg-3 col-md-3 col-sm-6">
           <a href="#" class="feature-link" id="feature-link-4">
             <div class="feature-box">
               <div class="icon">
