--- a/src/index.html
+++ b/src/index.html
@@ -53,23 +53,8 @@
     </div>
     <div class="menu-bar">
       <div class="container">
-        <div class="row align-items-center">
-          <div class="col">
-            <form action="" class="search-form">
-              <div class="category">
-                <i class="fas fa-list-ul"></i>
-                <select name="" id="">
-                  <option value="">Select a category</option>
-                </select>
-                <i class="fas fa-caret-down"></i>
-              </div>
-              <div class="search-field">
-                <input placeholder="Search products..." type="text">
-                <button><i class="fa fa-search"></i></button>
-              </div>
-            </form>
-          </div>
-          <div class="col-auto menu">
+        <div class="row align-items-center flex-lg-row-reverse">
+          <div class="col-lg-6 col-12 menu">
             <ul>
               <li><a href="#">Home</a>
                 <ul>
@@ -118,6 +103,21 @@
                 </ul>
               </li>
             </ul>
+          </div>
+          <div class="col-lg-6">
+            <form action="" class="search-form">
+              <div class="category">
+                <i class="fas fa-list-ul"></i>
+                <select name="" id="">
+                  <option value="">Select a category</option>
+                </select>
+                <i class="fas fa-caret-down"></i>
+              </div>
+              <div class="search-field">
+                <input placeholder="Search products..." type="text">
+                <button><i class="fa fa-search"></i></button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
