WDP181002-11 -  Add menu and search bar RWD for phone sized viewports

--- a/src/index.html
+++ b/src/index.html
@@ -105,6 +105,57 @@
             </ul>
           </div>
           <div class="col-lg-6">
+            <div class="fas fa-bars mobile-menu">
+              <ul>
+                <li><a href="#">Home</a>
+                  <ul>
+                    <li><a href="#">link1</a></li>
+                    <li><a href="#">link2</a></li>
+                    <li><a href="#">link3</a></li>
+                  </ul>
+
+                </li>
+                <li><a href="#">Furniture</a>
+                  <ul>
+                    <li><a href="#">link1</a></li>
+                    <li><a href="#">link2</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">Chair</a>
+                  <ul>
+                    <li><a href="#">link1</a></li>
+                    <li><a href="#">link2</a></li>
+                    <li><a href="#">link3</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">Table</a>
+                  <ul>
+                    <li><a href="#">link1</a></li>
+                    <li><a href="#">link2</a></li>
+                    <li><a href="#">link3</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">Sofa</a>
+                  <ul>
+                    <li><a href="#">link1</a></li>
+                    <li><a href="#">link2</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">Bedroom</a>
+                  <ul>
+                    <li><a href="#">link1</a></li>
+                    <li><a href="#">link2</a></li>
+                    <li><a href="#">link3</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">Blog</a>
+                  <ul>
+                    <li><a href="#">link1</a></li>
+                    <li><a href="#">link2</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
             <form action="" class="search-form">
               <div class="category">
                 <i class="fas fa-list-ul"></i>
@@ -118,6 +169,7 @@
                 <button><i class="fa fa-search"></i></button>
               </div>
             </form>
+
           </div>
         </div>
       </div>
@@ -308,7 +360,7 @@
         <div class="col-3">
           <div class="product-box">
             <div class="photo">
-                <img src="./images/photo-fur04.png">
+              <img src="./images/photo-fur04.png">
               <div class="sale">sale</div>
               <div class="buttons">
                 <a href="#" class="btn-main-small">Quick View</a>
