WDP181002-14 Added RWD to section New Furniture

--- a/src/index.html
+++ b/src/index.html
@@ -207,7 +207,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-xl-4">
           <div class="product-box">
             <div class="photo">
               <img src="./images/photo-fur01.png">
@@ -240,7 +240,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-xl-4">
           <div class="product-box">
             <div class="photo">
               <img src="./images/photo-fur02.png">
@@ -272,7 +272,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-xl-4">
           <div class="product-box">
             <div class="photo">
               <img src="./images/photo-fur03.png">
@@ -305,7 +305,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-xl-4">
           <div class="product-box">
             <div class="photo">
                 <img src="./images/photo-fur04.png">
@@ -337,7 +337,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-xl-4">
           <div class="product-box">
             <div class="photo">
               <img src="./images/photo-fur04.png">
@@ -369,7 +369,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-xl-4">
           <div class="product-box">
             <div class="photo">
               <img src="./images/photo-fur03.png">
@@ -402,7 +402,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-xl-4">
           <div class="product-box">
             <div class="photo">
               <img src="./images/photo-fur02.png">
@@ -434,7 +434,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-xl-4">
           <div class="product-box">
             <div class="photo">
               <img src="./images/photo-fur01.png">
