WDP181002-12 - Add missing classes to html, fix logo positioning on mobile viewports

--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,8 @@
           <div class="col text-left phone-number">
             <p><i class="fas fa-mobile-alt"></i> 2300 - 3560 - 222</p>
           </div>
-          <div class="col text-center">
-            <a href="#"><img src="./images/logo.png"></a>
+          <div class="col text-center logo__column">
+            <a href="#"><img class="company-claim__logo" src="./images/logo.png"></a>
           </div>
           <div class="col text-right cart">
             <a href="#" class="cart-box">
