--- a/src/index.html
+++ b/src/index.html
@@ -621,7 +621,7 @@
     <div class="footer-menu">
       <div class="container">
         <div class="row">
-          <div class="col">
+          <div class="col-12 col-sm-6 col-md-3">
             <div class="menu-wrapper">
               <h6>Information</h6>
               <ul>
@@ -632,7 +632,7 @@
               </ul>
             </div>
           </div>
-          <div class="col">
+          <div class="col-12 col-sm-6 col-md-3">
             <div class="menu-wrapper">
               <h6>My account</h6>
               <ul>
@@ -643,7 +643,7 @@
               </ul>
             </div>
           </div>
-          <div class="col">
+          <div class="col-12 col-sm-6 col-md-3">
             <div class="menu-wrapper">
               <h6>Information</h6>
               <ul>
@@ -654,7 +654,7 @@
               </ul>
             </div>
           </div>
-          <div class="col">
+          <div class="col-12 col-sm-6 col-md-3">
             <div class="menu-wrapper">
               <h6>Orders</h6>
               <ul>
@@ -672,11 +672,11 @@
     <div class="bottom-bar">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col"></div>
-          <div class="col copyright text-center">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-4"></div>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-4 copyright text-center">
             <p>©Copyright 2016 Bazar | All Rights Reserved</p>
           </div>
-          <div class="col socialmedia text-right">
+          <div class="col-6 col-sm-6 col-md-6 col-lg-4 socialmedia text-right">
             <ul>
               <li><a href="#"><i class="fab fa-twitter"></i></a></li>
               <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
