--- a/src/index.html
+++ b/src/index.html
@@ -365,7 +365,7 @@
               </div>
               <div class="price">
                 <div class="btn-main-small no-hover old-price">$ 40.00</div>
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small price-button no-hover">$ 30.00</div>
               </div>
             </div>
           </div>
@@ -430,7 +430,7 @@
               </div>
               <div class="price">
                 <div class="btn-main-small no-hover old-price">$ 45.00</div>
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small price-button no-hover">$ 30.00</div>
               </div>
             </div>
           </div>
@@ -527,7 +527,7 @@
               </div>
               <div class="price">
                 <div class="btn-main-small no-hover old-price">$ 40.00</div>
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small price-button no-hover">$ 30.00</div>
               </div>
             </div>
           </div>
