DP181002-18 Add missing ".price-button" class to price boxes in products on sale (background color change on product box hover)

--- a/src/index.html
+++ b/src/index.html
@@ -290,7 +290,7 @@
               </div>
               <div class="price">
                 <div class="btn-main-small no-hover old-price">$ 40.00</div>
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small price-button no-hover">$ 30.00</div>
               </div>
             </div>
           </div>
@@ -355,7 +355,7 @@
               </div>
               <div class="price">
                 <div class="btn-main-small no-hover old-price">$ 45.00</div>
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small price-button no-hover">$ 30.00</div>
               </div>
             </div>
           </div>
@@ -452,7 +452,7 @@
               </div>
               <div class="price">
                 <div class="btn-main-small no-hover old-price">$ 40.00</div>
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small price-button no-hover">$ 30.00</div>
               </div>
             </div>
           </div>
