WDP181002-21 New section PROMO

--- a/src/index.html
+++ b/src/index.html
@@ -178,6 +178,81 @@
       </div>
     </div>
   </header>
+
+  <div class="section-promo">
+    <div class="container">
+      <div class="row">
+          <div class="col-4">          
+              <div class="product-box box1">
+                  <div class="photo">
+                    <img src="./images/photo-fur01.png">
+                    <div class="sale1">HOT DEALS</div>
+                    <div class="dots-promo">
+                        <ul>
+                          <li><a href="#" class="active"></a></li>
+                          <li><a href="#"></a></li>
+                          <li><a href="#"></a></li>
+                        </ul>
+                    </div>
+
+                    <div class="counters">
+                        <div href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i>ADD TO CART</div>
+                        <ul>
+                            <li><a href="#">
+                              <p class="top">25</p> 
+                              <p class="bottom">DAYS</p></a></li>
+                            <li><a href="#">
+                              <p class="top">10</p> 
+                              <p class="bottom">HRS</p></a></li>
+                            <li><a href="#">
+                              <p class="top">45</p> 
+                              <p class="bottom">MINS</p></a></li>
+                            <li><a href="#">
+                              <p class="top">30</p> 
+                              <p class="bottom">SEC</p></a></li>
+                        </ul>                      
+                    </div>
+                  </div>
+                  <div class="content">
+                    <h5>Aenean Ru Bristique</h5>
+                    <div class="stars">
+                      <a href="#" class="star" value='1'></a>
+                      <a href="#" class="star" value='2'></a>
+                      <a href="#" class="star" value='3'></a>
+                      <a href="#" class="star" value='4'></a>
+                      <a href="#" class="star" value='5'></a>
+                    </div>
+                  </div>
+                  <div class="line"></div>
+                  <div class="actions">
+                    <div class="outlines">
+                      <a href="#" class="btn-outline active"><i class="far fa-eye"></i></a>
+                      <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+                      <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+                    </div>
+                    <div class="price">
+                      <div class="btn-main-small no-hover old-price">$ 40.00</div>
+                      <div class="btn-main-small no-hover">$ 30.00</div>
+                    </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-8 promo-slide">
+            <div class="photo">
+              <img src="./images/promo_01.png">
+              <div class="text-on">
+                <p>INDOOR </p><h1>FURNITURE</h1>
+                <h5>SAVE UP TO 50% OF ALL FURNITURE</h4>
+              </div>
+              <button>SHOP NOW</button>
+              <div class="left-button"><</div>
+              <div class="right-button">></div>
+            </div>
+          </div>
+      </div>
+    </div>
+  </div>
+
   <div class="section--features">
     <div class="container">
       <div class="row">
