WDP181002-21 Added missing classes and hover-animation

--- a/src/index.html
+++ b/src/index.html
@@ -189,9 +189,9 @@
                     <div class="sale1">HOT DEALS</div>
                     <div class="dots-promo">
                         <ul>
+                          <li><a href="#"></a></li>
+                          <li><a href="#"></a></li>
                           <li><a href="#" class="active"></a></li>
-                          <li><a href="#"></a></li>
-                          <li><a href="#"></a></li>
                         </ul>
                     </div>
 
@@ -232,7 +232,7 @@
                     </div>
                     <div class="price">
                       <div class="btn-main-small no-hover old-price">$ 40.00</div>
-                      <div class="btn-main-small no-hover">$ 30.00</div>
+                      <div class="btn-main-small no-hover price-button">$ 30.00</div>
                     </div>
                   </div>
               </div>
