WDP181002-21 Changed class name: on top_header

--- a/src/index.html
+++ b/src/index.html
@@ -186,7 +186,7 @@
               <div class="product-box box1">
                   <div class="photo">
                     <img src="./images/photo-fur01.png">
-                    <div class="sale1">HOT DEALS</div>
+                    <div class="top_header">HOT DEALS</div>
                     <div class="dots-promo">
                         <ul>
                           <li><a href="#"></a></li>
