Corrected brackets and tabs

--- a/src/index.html
+++ b/src/index.html
@@ -183,7 +183,7 @@
     <div class="container">
       <div class="row">
           <div class="col-4">          
-              <div class="product-box box1">
+              <div class="product-box">
                   <div class="photo">
                     <div class="top_header">HOT DEALS</div>
                     <div class="dots-promo">
@@ -243,8 +243,8 @@
                 <h5>SAVE UP TO 50% OF ALL FURNITURE</h4>
               </div>
               <button>SHOP NOW</button>
-              <div class="left-button"><</div>
-              <div class="right-button">></div>
+              <div class="left-button">&lt</div>
+              <div class="right-button">&gt</div>
             </div>
           </div>
       </div>
