--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <div class="row">
           <div class="col text-left">
             <ul>
-              <li><a href="#">USD 3 <i class="fas fa-caret-down"></i></a></li>
+              <li><a href="#">USD <i class="fas fa-caret-down"></i></a></li>
               <li><a href="#">English <i class="fas fa-caret-down"></i></a></li>
               <li><a href="#">Help <i class="fas fa-caret-down"></i></a></li>
             </ul>
