--- a/src/index.html
+++ b/src/index.html
@@ -311,6 +311,34 @@
       </div>
     </div>
   </div>
+
+  <div class="section-markup">
+    <div class="container">
+      <div class="row">
+          <div class="col-6 mleft">
+              <img class="markup-left" src="./images/sofa.jpg">
+              <div class="textphoto">
+                <p class="room">GUEST ROOM </p><p class="sofa">SOFA</p>
+                <p class="price">-20%</p>
+              </div>
+          </div>
+          <div class="col-6 mright">
+              <img class="markupRightTop" src="./images/sofa_lef_top.jpg">
+              <div class="textRightTop">
+                <p class="office">OFFICE </p><p class="chair">CHAIR</p>
+                <p class="collection">COLLECTION</p>
+                <p class="dolar">$200</p>
+              </div>
+              <img class="markupRightBottom" src="./images/sofa_lef_bottom.jpg">
+              <div class="textRightBottom">
+                  <p class="special">SPECIAL </p><p class="collection2">COLLECTION</p>
+                  <p class="save">SAVE UP 45% OF FURNITURE</h6>
+              </div>
+          </div>
+      </div>
+    </div>
+  </div> 
+
   <div class="section--products">
     <div class="container">
       <div class="panel-bar">
