--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <div class="row">
           <div class="col text-left">
             <ul>
-              <li><a href="#">USD 3 <i class="fas fa-caret-down"></i></a></li>
+              <li><a href="#">USD <i class="fas fa-caret-down"></i></a></li>
               <li><a href="#">English <i class="fas fa-caret-down"></i></a></li>
               <li><a href="#">Help <i class="fas fa-caret-down"></i></a></li>
             </ul>
@@ -707,7 +707,7 @@
         </div>
       </div>
     </div>
-  </div> // nie wiemy czy to jest potrzebne
+  </div>
   <footer>
     <div class="footer-menu">
       <div class="container">
@@ -762,7 +762,7 @@
           </div>
         </div>
       </div>
-    </div> //nie wiadomo
+    </div>
     <div class="bottom-bar">
       <div class="container">
         <div class="row align-items-center">
@@ -780,7 +780,7 @@
               <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
             </ul>
 
-            </div> //nie wiadomo
+            </div>
           </div>
         </div>
       </div>
