--- a/src/index.html
+++ b/src/index.html
@@ -182,73 +182,79 @@
   <div class="section-promo">
     <div class="container">
       <div class="row">
-          <div class="col-4">          
-              <div class="product-box box1">
-                  <div class="photo">
-                    <img src="./images/photo-fur01.png">
-                    <div class="top_header">HOT DEALS</div>
-                    <div class="dots-promo">
-                        <ul>
-                          <li><a href="#"></a></li>
-                          <li><a href="#"></a></li>
-                          <li><a href="#" class="active"></a></li>
-                        </ul>
-                    </div>
-
-                    <div class="counters">
-                        <div href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i>ADD TO CART</div>
-                        <ul>
-                            <li><a href="#">
-                              <p class="top">25</p> 
-                              <p class="bottom">DAYS</p></a></li>
-                            <li><a href="#">
-                              <p class="top">10</p> 
-                              <p class="bottom">HRS</p></a></li>
-                            <li><a href="#">
-                              <p class="top">45</p> 
-                              <p class="bottom">MINS</p></a></li>
-                            <li><a href="#">
-                              <p class="top">30</p> 
-                              <p class="bottom">SEC</p></a></li>
-                        </ul>                      
-                    </div>
-                  </div>
-                  <div class="content">
-                    <h5>Aenean Ru Bristique</h5>
-                    <div class="stars">
-                      <a href="#" class="star" value='1'></a>
-                      <a href="#" class="star" value='2'></a>
-                      <a href="#" class="star" value='3'></a>
-                      <a href="#" class="star" value='4'></a>
-                      <a href="#" class="star" value='5'></a>
-                    </div>
-                  </div>
-                  <div class="line"></div>
-                  <div class="actions">
-                    <div class="outlines">
-                      <a href="#" class="btn-outline active"><i class="far fa-eye"></i></a>
-                      <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                      <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
-                    </div>
-                    <div class="price">
-                      <div class="btn-main-small no-hover old-price">$ 40.00</div>
-                      <div class="btn-main-small no-hover price-button">$ 30.00</div>
-                    </div>
-                  </div>
-              </div>
-          </div>
-          <div class="col-8 promo-slide">
+        <div class="col-4">
+          <div class="product-box box1">
             <div class="photo">
-              <img src="./images/promo_01.png">
-              <div class="text-on">
-                <p>INDOOR </p><h1>FURNITURE</h1>
-                <h5>SAVE UP TO 50% OF ALL FURNITURE</h4>
+              <img src="./images/photo-fur01.png">
+              <div class="top_header">HOT DEALS</div>
+              <div class="dots-promo">
+                <ul>
+                  <li><a href="#"></a></li>
+                  <li><a href="#"></a></li>
+                  <li><a href="#" class="active"></a></li>
+                </ul>
               </div>
-              <button>SHOP NOW</button>
-              <div class="left-button"><</div>
-              <div class="right-button">></div>
+
+              <div class="counters">
+                <div href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i>ADD TO CART</div>
+                <ul>
+                  <li><a href="#">
+                      <p class="top">25</p>
+                      <p class="bottom">DAYS</p>
+                    </a></li>
+                  <li><a href="#">
+                      <p class="top">10</p>
+                      <p class="bottom">HRS</p>
+                    </a></li>
+                  <li><a href="#">
+                      <p class="top">45</p>
+                      <p class="bottom">MINS</p>
+                    </a></li>
+                  <li><a href="#">
+                      <p class="top">30</p>
+                      <p class="bottom">SEC</p>
+                    </a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="content">
+              <h5>Aenean Ru Bristique</h5>
+              <div class="stars">
+                <a href="#" class="star" value='1'></a>
+                <a href="#" class="star" value='2'></a>
+                <a href="#" class="star" value='3'></a>
+                <a href="#" class="star" value='4'></a>
+                <a href="#" class="star" value='5'></a>
+              </div>
+            </div>
+            <div class="line"></div>
+            <div class="actions">
+              <div class="outlines">
+                <a href="#" class="btn-outline active"><i class="far fa-eye"></i></a>
+                <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+                <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+              </div>
+              <div class="price">
+                <div class="btn-main-small no-hover old-price">$ 40.00</div>
+                <div class="btn-main-small no-hover price-button">$ 30.00</div>
+              </div>
             </div>
           </div>
+        </div>
+        <div class="col-8 promo-slide">
+          <div class="photo">
+            <img src="./images/promo_01.png">
+            <div class="text-on">
+              <p>INDOOR </p>
+              <h1>FURNITURE</h1>
+              <h5>SAVE UP TO 50% OF ALL FURNITURE</h4>
+            </div>
+            <button>SHOP NOW</button>
+            <div class="left-button">
+              <</div> <div class="right-button">>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -695,6 +701,37 @@
       </div>
     </div>
   </div>
+
+  <div class="brands">
+    <div class="container">
+    <div class="brands__slider">
+      <button class="brands__arrow">&lt;</button>
+      <div class="brands__item-space">
+        <img src="https://via.placeholder.com/150x100/FFFFFF/AAAAAA?text=Brand" alt="" class="brands__item">
+        <img src="https://via.placeholder.com/150x100/FFFFFF/AAAAAA?text=Brand" alt="" class="brands__item">
+        <img src="https://via.placeholder.com/150x100/FFFFFF/AAAAAA?text=Brand" alt="" class="brands__item">
+        <img src="https://via.placeholder.com/150x100/FFFFFF/AAAAAA?text=Brand" alt="" class="brands__item">
+        <img src="https://via.placeholder.com/150x100/FFFFFF/AAAAAA?text=Brand" alt="" class="brands__item">
+        <img src="https://via.placeholder.com/150x100/FFFFFF/AAAAAA?text=Brand" alt="" class="brands__item">
+        <img src="https://via.placeholder.com/150x100/FFFFFF/AAAAAA?text=Brand" alt="" class="brands__item">
+        <img src="https://via.placeholder.com/150x100/FFFFFF/AAAAAA?text=Brand" alt="" class="brands__item">
+        <img src="https://via.placeholder.com/150x100/FFFFFF/AAAAAA?text=Brand" alt="" class="brands__item">
+        <img src="https://via.placeholder.com/150x100/FFFFFF/AAAAAA?text=Brand" alt="" class="brands__item">
+        <img src="https://via.placeholder.com/150x100/FFFFFF/AAAAAA?text=Brand" alt="" class="brands__item">
+        <img src="https://via.placeholder.com/150x100/FFFFFF/AAAAAA?text=Brand" alt="" class="brands__item">
+        <img src="https://via.placeholder.com/150x100/FFFFFF/AAAAAA?text=Brand" alt="" class="brands__item">
+        <img src="https://via.placeholder.com/150x100/FFFFFF/AAAAAA?text=Brand" alt="" class="brands__item">
+        <img src="https://via.placeholder.com/150x100/FFFFFF/AAAAAA?text=Brand" alt="" class="brands__item">
+        <img src="https://via.placeholder.com/150x100/FFFFFF/AAAAAA?text=Brand" alt="" class="brands__item">
+        <img src="https://via.placeholder.com/150x100/FFFFFF/AAAAAA?text=Brand" alt="" class="brands__item">
+        <img src="https://via.placeholder.com/150x100/FFFFFF/AAAAAA?text=Brand" alt="" class="brands__item">
+        <img src="https://via.placeholder.com/150x100/FFFFFF/AAAAAA?text=Brand" alt="" class="brands__item">
+      </div>
+      <button class="brands__arrow">&gt;</button>
+    </div>
+    </div>
+  </div>
+
   <footer>
     <div class="footer-menu">
       <div class="container">
