WDP181002-40 - Fix hover effects for simulated saved product rating (full stars will become outlines on hover)

--- a/src/index.html
+++ b/src/index.html
@@ -398,8 +398,8 @@
                 <a class="star-rank not-hover"></a>
                 <a class="star-rank not-hover"></a>
                 <a class="star-rank hover"></a>
-                <a class="full star-rank hover"></a>
-                <a class="full star-rank hover"></a>
+                <a class="star-rank hover"></a>
+                <a class="star-rank hover"></a>
               </div>
             </div>
             <div class="line"></div>
