WDP181002-40 - Fix star rating in promo section

--- a/src/index.html
+++ b/src/index.html
@@ -218,12 +218,12 @@
                   <div class="content">
                     <h5>Aenean Ru Bristique</h5>
                     <div class="stars">
-                      <a href="#" class="star" value='1'></a>
-                      <a href="#" class="star" value='2'></a>
-                      <a href="#" class="star" value='3'></a>
-                      <a href="#" class="star" value='4'></a>
-                      <a href="#" class="star" value='5'></a>
-                    </div>
+                        <a class="star-rank"></a>
+                        <a class="star-rank"></a>
+                        <a class="star-rank"></a>
+                        <a class="full star-rank"></a>
+                        <a class="full star-rank"></a>
+                      </div>
                   </div>
                   <div class="line"></div>
                   <div class="actions">
