WDP181002-25 Added RWD to section Deals

--- a/src/index.html
+++ b/src/index.html
@@ -315,19 +315,19 @@
   <div class="section-deals">
     <div class="container">
       <div class="row">
-          <div class="col-6 mleft">
+        <div class="col-12 col-sm-12 col-md-6 mleft">
               <img class="deals-left" src="./images/sofa.jpg">
               <div class="textphoto">
                 <p class="room">GUEST ROOM </p><p class="sofa">SOFA</p>
                 <p class="price">-20%</p>
               </div>
           </div>
-          <div class="col-6 mright">
+          <div class="col-12 col-sm-12 col-md-6 mright">
               <img class="dealsRightTop" src="./images/sofa_lef_top.jpg">
               <div class="textRightTop">
                 <p class="office">OFFICE </p><p class="chair">CHAIR</p>
                 <p class="collection">COLLECTION</p>
-                <p class="dolar">$200</p>
+                <p class="dolar">$200.00</p>
               </div>
               <img class="dealsRightBottom" src="./images/sofa_lef_bottom.jpg">
               <div class="textRightBottom">
