WDP181002-17 - Move DOM requests to DOM object, add html buttons to test sliders

--- a/src/index.html
+++ b/src/index.html
@@ -320,6 +320,8 @@
         <div class="row no-gutters align-items-end">
           <div class="col-auto heading">
             <h3>New furniture</h3>
+            <!-- Below: test code for js sliders -->
+            <button id="destroy">Destroy</button><button id="rebuild">Rebuild</button><button id="info">Info</button>
           </div>
           <div class="col menu">
             <ul>
@@ -347,7 +349,7 @@
         </div>
       </div>
 
-      <div class="furniture-slider" id="furniture-slider">
+      <div class="furniture-slider" id="furniture-bed-slider">
 
         <div class="product-box-space">
           <div class="product-box">
