--- a/src/index.html
+++ b/src/index.html
@@ -780,7 +780,7 @@
     <div class="footer-menu">
       <div class="container">
         <div class="row">
-          <div class="col">
+          <div class="col-12 col-sm-6 col-md-3">
             <div class="menu-wrapper">
               <h6>Information</h6>
               <ul>
@@ -790,66 +790,66 @@
                 <li><a href="#">Online support</a></li>
               </ul>
             </div>
-            <div class="col">
-              <div class="menu-wrapper">
-                <h6>My account</h6>
-                <ul>
-                  <li><a href="#">Login</a></li>
-                  <li><a href="#">My cart</a></li>
-                  <li><a href="#">Wishlist</a></li>
-                  <li><a href="#">Checkout</a></li>
-                </ul>
-              </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-3">
+            <div class="menu-wrapper">
+              <h6>My account</h6>
+              <ul>
+                <li><a href="#">Login</a></li>
+                <li><a href="#">My cart</a></li>
+                <li><a href="#">Wishlist</a></li>
+                <li><a href="#">Checkout</a></li>
+              </ul>
             </div>
-            <div class="col">
-              <div class="menu-wrapper">
-                <h6>Information</h6>
-                <ul>
-                  <li><a href="#">Specials</a></li>
-                  <li><a href="#">New products</a></li>
-                  <li><a href="#">Best Sellers</a></li>
-                  <li><a href="#">Out Stores</a></li>
-                </ul>
-              </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-3">
+            <div class="menu-wrapper">
+              <h6>Information</h6>
+              <ul>
+                <li><a href="#">Specials</a></li>
+                <li><a href="#">New products</a></li>
+                <li><a href="#">Best Sellers</a></li>
+                <li><a href="#">Out Stores</a></li>
+              </ul>
             </div>
-            <div class="col">
-              <div class="menu-wrapper">
-                <h6>Orders</h6>
-                <ul>
-                  <li><a href="#">Payment options</a></li>
-                  <li><a href="#">Shipping and delivery</a></li>
-                  <li><a href="#">Returns</a></li>
-                  <li><a href="#">Shipping</a></li>
-                </ul>
-              </div>
-              <img src="./images/cards.png">
+          </div>
+          <div class="col-12 col-sm-6 col-md-3">
+            <div class="menu-wrapper">
+              <h6>Orders</h6>
+              <ul>
+                <li><a href="#">Payment options</a></li>
+                <li><a href="#">Shipping and delivery</a></li>
+                <li><a href="#">Returns</a></li>
+                <li><a href="#">Shipping</a></li>
+              </ul>
             </div>
+            <img src="./images/cards.png">
           </div>
         </div>
       </div>
     </div>
-<!-- IS THERE A </DIV> NEEDED HERE ?? -->          
-<div class="bottom-bar">
-        <div class="container">
-          <div class="row align-items-center">
-            <div class="col"></div>
-            <div class="col copyright text-center">
-              <p>©Copyright 2016 Bazar | All Rights Reserved</p>
-            </div>
-            <div class="col socialmedia text-right">
-              <ul>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
-              </ul>
-            </div>
+    <div class="bottom-bar">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-4"></div>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-4 copyright text-center">
+            <p>©Copyright 2016 Bazar | All Rights Reserved</p>
+          </div>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-4 socialmedia text-right">
+            <ul>
+              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+              <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+              <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+              <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+            </ul>
           </div>
         </div>
       </div>
+    </div>
   </footer>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.8.7/min/tiny-slider.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
